--- a/package.json
+++ b/package.json
@@ -88,6 +88,9 @@
       "sample.gif"
     ],
     "generator": ">=1.0.0 <2.0.0",
+    "filters": [
+      "@asyncapi/generator-filters"
+    ],
     "hooks": {
       "@asyncapi/generator-hooks": "createAsyncapiFile"
     }
